# nkust_finapp

./: course_intro.html  course_intro.md  pyproject.toml
week1_intro/: 001_course_content.md  002_theory_explanation.md  003_ai_teaching.md  004_examples.md
week1_intro/examples/: w100_python_basics.py  w101_npv_calculator.py  w102_irr_calculator.py
week2_fastapi/: 001_course_content.md  002_topic1_api.md  003_topic2_http.md  004_topic3_fastapi.md  005_ai_teaching.md  006_examples.md
week2_fastapi/examples/: w201_hello_api.py  w202_npv_api.py
week3_sqlmodel/: 001_course_content.md  002_topic1_database.md  003_topic2_orm.md  004_ai_teaching.md  005_examples.md
week3_sqlmodel/examples/: w301_create_db.py  w302_crud_stock.py
week4_yfinance/: 001_course_content.md  002_topic1_yfinance.md  003_topic2_etl.md  004_ai_teaching.md  005_examples.md
week4_yfinance/examples/: w401_fetch_price.py  w402_save_to_db.py
week5_pandas/: 001_course_content.md  002_topic1_pandas.md  003_topic2_indicators.md  004_ai_teaching.md  005_examples.md
week5_pandas/examples/: w501_pandas_basics.py  (+1 more)
week6_web_ui/: 001_course_content.md  002_topic1_jinja2.md  003_topic2_bootstrap.md  004_ai_teaching.md  005_examples.md
week7_chartjs/: 001_course_content.md  002_topic1_chartjs.md  003_topic2_integration.md  004_ai_teaching.md  005_examples.md
week8_filter/: 001_course_content.md  002_topic1_forms.md  003_topic2_fastapi.md  004_ai_teaching.md  005_examples.md
week9_web_final/: 001_course_content.md  002_topic1_architecture.md  003_topic2_ux.md  004_ai_teaching.md
(+9 files in other folders)
