[project]
name = "finapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.129.2",
    "jinja2>=3.1.6",
    "numpy>=2.4.2",
    "numpy-financial>=1.0.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "python-multipart>=0.0.22",
    "sqlmodel>=0.0.37",
    "yfinance>=1.2.0",
]
